--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a href="#home">Home</a>
             <a href="#news">News</a>
             <div class="dropdown">
-              <button class="dropbtn">Topic 1
+              <button class="menu_1">Topic 1
                 <i class="fa fa-caret-down"></i>
               </button>
               <div class="dropdown-content">
