--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 </div>
 
     <div id="colorstrip">
+         <div class=search-box>
+            <input id="searchbar" onkeyup="search_topics()" type="text" name="search" placeholder="  Search topics... ">
+         </div>
         <div class="subtitle">
             Notes
         </div>
