--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
         <div class="navbar">
             <a href="#home">Home</a>
             <a href="#news">News</a>
+            
+            
             <div class="dropdown">
-              <button class="dropbtn">Topic 1
+              <button class="dropbtn">Topic 1.1
                 <i class="fa fa-caret-down"></i>
               </button>
               <div class="dropdown-content">
@@ -57,6 +59,31 @@
                 <a href="#">1.1.12</a>
                 <a href="#">1.1.13</a>
                 <a href="#">1.1.14</a>
+              </div>
+            </div> 
+          </div>
+
+        <div class="dropdown_2">
+              <button class="dropbtn">Topic 1.2
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                <a href="#">1.2.1</a>
+                <a href="#">1.2.2</a>
+                <a href="#">1.2.3</a>
+                <a href="#">1.2.4</a>
+                <a href="#">1.2.5</a>
+                <a href="#">1.2.6</a>
+                <a href="#">1.2.7</a>
+                <a href="#">1.2.8</a>
+                <a href="#">1.2.9</a>
+                <a href="#">1.2.10</a>
+                <a href="#">1.2.11</a>
+                <a href="#">1.2.12</a>
+                <a href="#">1.2.13</a>
+                <a href="#">1.2.14</a>
+                <a href="#">1.2.15</a>
+                <a href="#">1.2.16</a>
               </div>
             </div> 
           </div>
