--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 
     <link href='https://fonts.googleapis.com/css?family=Spline Sans Mono' rel='stylesheet'>
+    <script src="Uniproject.js"></script>
 
     <title>
         IB Study
@@ -26,7 +27,7 @@
 
     <div id="colorstrip">
          <div class=search-box>
-            <input id="searchbar" onkeyup="search_topics()" type="text" name="search" placeholder="  Search topics... ">
+            <input id="searchbar" onkeyup="search_topic()" type="text" name="search" placeholder="  Search topics... ">
          </div>
         <div class="subtitle">
             Notes
