--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 
     <div id="colorstrip">
          <div class=search-box>
-            <input id="searchbar" onkeyup="search_topic()" type="text" name="search" placeholder="  Search topics... ">
+                <input id="searchbar" onkeyup="search_topic()" type="text"
+        name="search" placeholder="Search units..">
          </div>
         <div class="subtitle">
             Notes
