--- a/index.html
+++ b/index.html
@@ -33,6 +33,23 @@
         <div class="subtitle">
             Notes
         </div>
+        
+            <ol id='list'>
+        <li class="units">1.1</li>
+        <li class="units">1.2</li>
+        <li class="units">1.3</li>
+        <li class="units">1.4</li>
+        <li class="units">1.5</li>
+        <li class="units">1.6</li>
+        <li class="units">1.7</li>
+        <li class="units">1.8</li>
+        <li class="units">1.9</li>
+        <li class="units">1.10</li>
+        <li class="units">1.11</li>
+        <li class="units">1.12</li>
+        <li class="units">1.13</li>
+        <li class="units">1.14</li>
+    </ol>
 
         <br></br>
         <br></br>
