--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
     <link href='https://fonts.googleapis.com/css?family=Spline Sans Mono' rel='stylesheet'>
-    <script src="Uniproject.js"></script>
+    <script src="javaScript.js"></script>
 
     <title>
         IB Study
